[gd_scene load_steps=7 format=3 uid="uid://dqncm2sqkp85b"]

[ext_resource type="Script" uid="uid://dpncx8764l267" path="res://scenes/bone.gd" id="1_f60gj"]
[ext_resource type="Texture2D" uid="uid://cc04dxxbaajn4" path="res://assets/sprites_beta/bone.png" id="1_mm6ww"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f60gj"]

[sub_resource type="Animation" id="Animation_74jvl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_kq1tw"]
resource_name = "spin"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.2831855]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oc00q"]
_data = {
&"RESET": SubResource("Animation_74jvl"),
&"spin": SubResource("Animation_kq1tw")
}

[node name="Node2D" type="CharacterBody2D" groups=["Weapons"]]
scale = Vector2(2, 2)
script = ExtResource("1_f60gj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_mm6ww")

[node name="BoneHitbox" type="Area2D" parent="." groups=["Weapons"]]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoneHitbox"]
shape = SubResource("CircleShape2D_f60gj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_oc00q")
}

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="BoneHitbox" to="." method="_on_bone_hitbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
